<resources>
    <string name="app_name">examen</string>
    <string name="txtname">Nombre</string>
    <string name="txtdescripcion">Descripcion</string>
    <string name="txtadd">Agregar</string>
    <string name="txtlist">Listar</string>
    <string name="navmapa">Ver mapa</string>
    <string name="navlistar">Listar lugares</string>
    <string name="navopciones">Menu</string>

    <string name="txtlugar">Nombre del lugar</string>
    <string name="txtlatitud">Latitud</string>
    <string name="txtlongitud">Longitud</string>





    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
