<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txtNombreLugar" android:textStyle="bold"
            tools:text="@string/txtlugar"/>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/lblNombreLugar" android:textSize="18sp"/>
    <TextView
            android:text="@string/txtlatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txtLatitud" android:textStyle="bold"/>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/lblLatitud" android:textSize="18sp"/>
    <TextView
            android:text="@string/txtlongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txtLongitud" android:textStyle="bold"/>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/lbllongitud" android:textSize="18sp"/>
</LinearLayout>